# detector_c

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  make_det.sh  make_ncnn.sh
include/: detector.h  detector.hpp
res/: rtmdet_m_8xb32-300e_coco.param  rtmdet_s_8xb32-300e_coco.param  rtmdet_tiny_8xb32-300e_coco.param
src/: detector.c  detector.cpp  detector.h  detector.hpp  detncnn.cpp  detncnn.h  fastestdet.c  fastestdet.cpp  nanodet.c  nanodet_plus.c  nanodet_plus.cpp
src/detector/: fastestdet.cpp  fastestdet.hpp  nanodetplus.cpp  nanodetplus.h  nanodetplus.hpp  rtmdet.cpp  rtmdet.hpp
test/: AddTest.cmake  CMakeLists.txt  nv12.c  nv12.c.in  rgb.c  rgb.c.in  test_template.c.in  test_template.cpp.in
test/cmake/: AddTest.cmake
